--- a/DataAnalysis.Rmd
+++ b/DataAnalysis.Rmd
@@ -110,8 +110,7 @@ df_ratings = rbind(data1,data2,data3,data4)
 write.table(df_ratings,"data/combined_data_sample.txt", row.names = FALSE, col.names = FALSE)
 
 #Eliminamos variables que ya no son útiles
-#rm(combined_data1, combined_data2, combined_data3, combined_data4,
-#   data1, data2, data3, data4, filas_ID_combined_all)
+rm(combined_data1, combined_data2, combined_data3, combined_data4, data1, data2, data3, data4, filas_ID_combined_all)
 ```
 
 
@@ -146,7 +145,7 @@ netflix = netflix %>%
      mutate(Idx = row_number())
 
 #Se eliminan las variables auxiliares
-#rm(df_ratings, movie_rows, rows_ID, reps)
+rm(df_ratings, movie_rows, rows_ID, reps)
 ```
 Lectura del fichero movies_titles.csv
 ```{r message = FALSE, warning = FALSE, cache = TRUE}
@@ -172,8 +171,18 @@ netflix = inner_join(x = netflix, y = df_movies, by = "MovieID", all = TRUE)
 #Se añade la diferencia en años entre el año de puntuación y el de estreno de la película
 netflix = mutate(netflix, YearsSinceRelease = year(RatingDate) - MovieRelease)
 
+#Adicionalmente, dividimos la variable RatingDate en: día, mes y año
+sep = netflix %>%
+  separate(RatingDate,into = c("Year","Month","Day"), sep = "-") %>%
+  na.omit(netflix) %>%
+  mutate(Idx = row_number())
+
+netflix = mutate(netflix, sep)
+
 #Se ordenan las posiciones de las columnas y se indican su nuevo nombre
-netflix = select(netflix, Idx, MovieID, Title, UserID, Rating, RatingDate, MovieRelease, YearsSinceRelease)
+netflix = select(netflix, Idx, MovieID, Title, UserID, Rating, Day, Month, Year, RatingDate, MovieRelease,  YearsSinceRelease)
+
+rm(sep)
 
 #Exportamos el fichero preparado y construido para empezar a trabajar en su análisis
 write.csv(netflix, "data/netflix.csv", row.names = FALSE)
@@ -184,7 +193,7 @@ write.csv(netflix, "data/netflix.csv", row.names = FALSE)
 
 
 ```{r}
-glimpse(netflix)
+str(netflix)
 ```
 
 * **Idx:** Variable numérica que determina la posición o índice de cada observación del dataset.
@@ -215,6 +224,33 @@ netflix$MovieRelease = as.numeric(netflix$MovieRelease)
 
 #Se transforma la variable YearsSinceRelease a numérica
 netflix$YearsSinceRelease = as.numeric(netflix$YearsSinceRelease)
+
+```
+
+## Tabla resumen del número de calificaciones
+```{r}
+calif = table(netflix$MovieID, netflix$Rating)
+calif
+
+#Añadir la media, la desviación típica, la moda y la mediana.
+```
+
+## Comparación de las 5 películas con mayor número de calificaciones
+```{r}
+#Compara sus estadísticos y distribuciones(histogramas, boxplot, violin plot,. . . )
+```
+
+## Distribución de valoraciones por día
+
+## Distribución de valoraciones por mes
+```{r}
+#Investiga la distribución de valoraciones por día de la semana y por mes.¿Qué meses y días de la semana se valoran más películas en netflix?
+```
+## Las 10 películas más votadas
+```{r}
+#Tabla agrupada por película y año del número de valoraciones.
+#Representación gráfica.
+#Distribución del score promedio por año.
 ```
 
 
