--- a/DataAnalysis.Rmd
+++ b/DataAnalysis.Rmd
@@ -149,17 +149,14 @@ netflix = netflix %>%
 #Se eliminan las variables auxiliares
 rm(df_ratings, movie_rows, rows_ID, reps)
 ```
+
 Lectura del fichero movies_titles.csv
+
 ```{r message = FALSE, warning = FALSE, cache = TRUE}
 #Se importa el dataframe de los datos de las películas
-df_movies = read_csv("data/movie_titles.csv", col_names = FALSE)
+df_movies = read.csv("data/movie_titles.csv",  col.names= c("MovieID", "MovieRelease", "Title", "Title2", "Title3", "Title4"), fill=TRUE, sep = ",")
 
-df_movies = df_movies %>% 
-     rename(
-      MovieID = X1,
-      MovieRelease = X2,
-      Title = X3
-     )
+df_movies = unite(df_movies, Title, Title, Title2, Title3, Title4, sep = "")
 
 ```
 
