--- a/DataAnalysis.Rmd
+++ b/DataAnalysis.Rmd
@@ -225,16 +225,11 @@ str(netflix)
 
 
 ## Tabla resumen del número de calificaciones
-```{r}
-calif = table(netflix$MovieID, netflix$Rating)
-```
-
 ```{python}
 import pandas as pd
 netflix_py = pd.read_csv("data/netflix.csv")
 print(netflix_py)
 ```
-
 
 
 ## Comparación de las 5 películas con mayor número de calificaciones
@@ -261,18 +256,51 @@ ggplot(mas_votadas,aes(Title, Rating, group=MovieID))+
 ```
 #Compara sus estadísticos y distribuciones(histogramas, boxplot, violin plot,. . . )
 ```
+## Distribución de calificaciones por año
+
+```{r}
+df_movies = filter(df_movies, df_movies$MovieID %in% muestra_grupo)
+calif_año = table(df_movies$MovieRelease)
+
+df_movies$MovieRelease = as.numeric(df_movies$MovieRelease)
+
+ggplot(data = df_movies) +
+  geom_histogram(aes(x = MovieRelease, y = ..count../sum(..count..), fill = ..count..),breaks = c(1920,1930,1940,1950,1960,1970,1980,1990,2000,2010), binwidth = 10)+
+  geom_density(aes(x = MovieRelease, y = 10*..count../sum(..count..))) 
+  
+```
 
 ## Distribución de valoraciones por día
+```{r}
+netflix$DayOfWeek = weekdays(netflix$RatingDate)
+ggplot(data = netflix) +
+  geom_histogram(aes(x = DayOfWeek, y = ..count.., fill = ..count..), stat = "count")
+
+```
 
 ## Distribución de valoraciones por mes
 ```{r}
+
+ggplot(data = netflix) +
+  geom_histogram(aes(x = Month, y = ..count.., fill = ..count..), stat = "count")
+  
 #Investiga la distribución de valoraciones por día de la semana y por mes.¿Qué meses y días de la semana se valoran más películas en netflix?
 ```
 ## Las 10 películas más votadas
 ```{r}
 #Tabla agrupada por película y año del número de valoraciones.
+tabla = table(netflix$MovieID, netflix$Year)
+tabla = as.data.frame(tabla)
+
+names(orden[1:10])
+
+ggplot(tabla, aes(x = Var2, y = Freq))+
+geom_line()
+
 #Representación gráfica.
+
 #Distribución del score promedio por año.
+tabla2 = table(netflix$MovieID, netflix$Year)
 ```
 
 
